Fixed dark mode, changed color namings & added shortcuts

--- a/frontend-new/src/styles/main.css
+++ b/frontend-new/src/styles/main.css
@@ -17,16 +17,6 @@
   height: 2px;
 }
 
-body {
-    background-color: #f8faff;
-    color: #262626;
-}
-
-.dark body {
-    background-color: #181a1b;
-    color: #E0E6f0;
-}
-
 html {
     font-family: -apple-system,BlinkMacSystemFont,'Segoe UI','Oxygen','Ubuntu','Cantarell','Fira Sans','Droid Sans','Helvetica Neue',sans-serif;
     font-weight: 400;
